added Traefik API gateway for project, also added config for it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,33 @@
 version: "3"
 
 services:
+  traefik:
+    container_name: traefik
+    image: traefik:3.2
+    command:
+      - "--log.level=DEBUG"
+      - "--configFile=/etc/traefik/traefik.yml"
+    ports:
+      - "80:80"
+      - "443:443"
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./configs/traefik.yml:/etc/traefik/traefik.yml
+    networks:
+      - traefik
+
+
   content-service:
     container_name: content-service
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.content-service.entrypoints=web"
+      - "traefik.http.routers.content-service.rule=PathPrefix(`/content-service`)"
+      - "traefik.http.services.content-service.loadbalancer.healthcheck.path=/content-service/health"
+      - "traefik.http.services.content-service.loadbalancer.healthcheck.interval=10s"
+      - "traefik.http.services.content-service.loadbalancer.healthcheck.timeout=3s"
+      - "traefik.http.services.content-service.loadbalancer.server.port=8010"
     build:
       context: .
       dockerfile: deployments/docker/content-service.dockerfile
@@ -10,13 +35,19 @@ services:
       PORT: ${CONTENT_SERVICE_WEB_PORT}
       GRPC_PORT: ${CONTENT_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
+    expose:
+      - ${CONTENT_SERVICE_WEB_PORT}
     ports:
       - ${CONTENT_SERVICE_WEB_PORT}:${CONTENT_SERVICE_WEB_PORT}
     deploy:
       mode: replicated
       replicas: 1
     networks:
+      - traefik
       - default
+    depends_on:
+      - traefik
 
 networks:
+  traefik:
   default:
