--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,8 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.content-service.entrypoints=web
-      - traefik.http.routers.content-service.rule=PathPrefix(`/content-service`)
-      - traefik.http.services.content-service.loadbalancer.healthcheck.path=/content-service/health
+      - traefik.http.routers.content-service.rule=Host(`localhost`)
+      - traefik.http.services.content-service.loadbalancer.healthcheck.path=/health
       - traefik.http.services.content-service.loadbalancer.healthcheck.interval=10s
       - traefik.http.services.content-service.loadbalancer.healthcheck.timeout=3s
       - traefik.http.services.content-service.loadbalancer.server.port=8010
