docker-compose, traefik configs adjusted

--- a/configs/traefik.yml
+++ b/configs/traefik.yml
@@ -4,9 +4,9 @@ global:
 
 providers:
   docker:
+    watch: true
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
-    useBindPortIP: true
 
 api:
   dashboard: true
