--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./configs/traefik.yml:/etc/traefik/traefik.yml
+    restart: on-failure
     networks:
       - traefik
     depends_on:
@@ -25,20 +26,17 @@ services:
       dockerfile: deployments/docker/content-service.dockerfile
     labels:
       - traefik.enable=true
-      - traefik.http.routers.content-service.entrypoints=web
       - traefik.http.routers.content-service.rule=PathPrefix(`/content-service`)
       - traefik.http.services.content-service.loadbalancer.healthcheck.path=/health
       - traefik.http.services.content-service.loadbalancer.healthcheck.interval=10s
       - traefik.http.services.content-service.loadbalancer.healthcheck.timeout=3s
-      - traefik.http.services.content-service.loadbalancer.server.port=8010
+      - traefik.http.services.content-service.loadbalancer.server.port=${CONTENT_SERVICE_WEB_PORT}
     environment:
       PORT: ${CONTENT_SERVICE_WEB_PORT}
       GRPC_PORT: ${CONTENT_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
     expose:
       - ${CONTENT_SERVICE_WEB_PORT}
-    ports:
-      - ${CONTENT_SERVICE_WEB_PORT}:${CONTENT_SERVICE_WEB_PORT}
     networks:
       - traefik
       - default
