--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.content-service.rule=PathPrefix(`/content-service`)
-      - traefik.http.services.content-service.loadbalancer.healthcheck.path=/health
+      - traefik.http.services.content-service.loadbalancer.healthcheck.path=/content-service/health
       - traefik.http.services.content-service.loadbalancer.healthcheck.interval=10s
       - traefik.http.services.content-service.loadbalancer.healthcheck.timeout=3s
       - traefik.http.services.content-service.loadbalancer.server.port=${CONTENT_SERVICE_WEB_PORT}
@@ -39,6 +39,31 @@ services:
       - ${CONTENT_SERVICE_WEB_PORT}
     ports:
       - ${CONTENT_SERVICE_WEB_PORT}:${CONTENT_SERVICE_WEB_PORT}
+    networks:
+      - traefik
+      - default
+
+  auth-service:
+    container_name: auth-service
+    build:
+      context: .
+      dockerfile: deployments/docker/auth-service.dockerfile
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.auth-service.entrypoints=web
+      - traefik.http.routers.auth-service.rule=PathPrefix(`/auth-service`)
+      - traefik.http.services.auth-service.loadbalancer.healthcheck.path=/auth-service/health
+      - traefik.http.services.auth-service.loadbalancer.healthcheck.interval=10s
+      - traefik.http.services.auth-service.loadbalancer.healthcheck.timeout=3s
+      - traefik.http.services.auth-service.loadbalancer.server.port=${AUTH_SERVICE_WEB_PORT}
+    environment:
+      PORT: ${AUTH_SERVICE_WEB_PORT}
+      GRPC_PORT: ${AUTH_SERVICE_GRPC_PORT}
+      GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
+    expose:
+      - ${AUTH_SERVICE_WEB_PORT}
+    ports:
+      - ${AUTH_SERVICE_WEB_PORT}:${AUTH_SERVICE_WEB_PORT}
     networks:
       - traefik
       - default
