added users db tern migrations for users-service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,7 @@ services:
       PORT: ${USERS_SERVICE_WEB_PORT}
       GRPC_PORT: ${USERS_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
+      DATABASE_URL: postgres://${USERS_DB_USERNAME}:${USERS_DB_PASSWORD}@users_postgres:${USERS_DB_PORT}/${USERS_DB_NAME}
     expose:
       - ${USERS_SERVICE_WEB_PORT}
     ports:
@@ -93,6 +94,40 @@ services:
       - traefik
       - default
 
+  users_postgres:
+    container_name: users_postgres
+    image: postgres:17.2-alpine
+    environment:
+      POSTGRES_USER: ${USERS_DB_USERNAME}
+      POSTGRES_PASSWORD: ${USERS_DB_PASSWORD}
+      POSTGRES_DB: ${USERS_DB_NAME}
+    restart: on-failure
+    ports:
+      - ${USERS_DB_PORT}:5432
+    volumes:
+      - users_db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready --dbname ${USERS_DB_NAME} --username ${USERS_DB_USERNAME}" ]
+      interval: 1s
+      timeout: 5s
+
+  users_migrator:
+    build:
+      context: .
+      dockerfile: deployments/docker/tern/users-tern-migrator.dockerfile
+    command:
+      - migrate
+      - --conn-string
+      - postgres://${USERS_DB_USERNAME}:${USERS_DB_PASSWORD}@users_postgres:5432/${USERS_DB_NAME}
+      - --migrations
+      - /migrations
+    depends_on:
+      users_postgres:
+        condition: service_healthy
+
 networks:
   traefik:
   default:
+
+volumes:
+  users_db_data:
