--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       PORT: ${USERS_SERVICE_WEB_PORT}
       GRPC_PORT: ${USERS_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
-      DATABASE_URL: postgres://${USERS_DB_USERNAME}:${USERS_DB_PASSWORD}@users_postgres:${USERS_DB_PORT}/${USERS_DB_NAME}
+      DATABASE_URL: postgres://${USERS_DB_USERNAME}:${USERS_DB_PASSWORD}@users_postgres:5432/${USERS_DB_NAME}
     expose:
       - ${USERS_SERVICE_WEB_PORT}
     ports:
@@ -93,6 +93,9 @@ services:
     networks:
       - traefik
       - default
+    depends_on:
+      users_postgres:
+        condition: service_healthy
 
   users_postgres:
     container_name: users_postgres
