api-gateway: added docker compose file for ecosystem on own api-api-gateway

--- a/deployments/compose/traefik.docker-compose.yml
+++ b/deployments/compose/traefik.docker-compose.yml
@@ -22,8 +22,8 @@ services:
   content-service:
     container_name: content-service
     build:
-      context: .
-      dockerfile: deployments/docker/content-service.dockerfile
+      context: ..
+      dockerfile: docker/content-service.dockerfile
     labels:
       - traefik.enable=true
       - traefik.http.routers.content-service.rule=PathPrefix(`/content-service`)
@@ -46,8 +46,8 @@ services:
   auth-service:
     container_name: auth-service
     build:
-      context: .
-      dockerfile: deployments/docker/auth-service.dockerfile
+      context: ..
+      dockerfile: docker/auth-service.dockerfile
     labels:
       - traefik.enable=true
       - traefik.http.routers.auth-service.entrypoints=web
@@ -71,8 +71,8 @@ services:
   users-service:
     container_name: users-service
     build:
-      context: .
-      dockerfile: deployments/docker/users-service.dockerfile
+      context: ..
+      dockerfile: docker/users-service.dockerfile
     labels:
       - traefik.enable=true
       - traefik.http.routers.users-service.entrypoints=web
@@ -116,8 +116,8 @@ services:
 
   users_migrator:
     build:
-      context: .
-      dockerfile: deployments/docker/tern/users-tern-migrator.dockerfile
+      context: ..
+      dockerfile: docker/tern/users-tern-migrator.dockerfile
     command:
       - migrate
       - --conn-string
