micro: api-gateway adjusted to new gRPC logic

--- a/api-gateway.docker-compose.yml
+++ b/api-gateway.docker-compose.yml
@@ -13,12 +13,15 @@ services:
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
       USERS_SERVICE_URL: http://users-service:${USERS_SERVICE_WEB_PORT}
       USERS_SERVICE_PATH: users
+      AUTH_SERVICE_URL: http://auth-service:${USERS_SERVICE_WEB_PORT}
+      AUTH_SERVICE_PATH: auth
     ports:
       - ${API_GATEWAY_PORT}:${API_GATEWAY_PORT}
     networks:
       - gateway
-
-
+    depends_on:
+      - users-service
+      - auth-service
 
   auth-service:
     container_name: auth-service
@@ -29,10 +32,8 @@ services:
       PORT: ${AUTH_SERVICE_WEB_PORT}
       GRPC_PORT: ${AUTH_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
-    expose:
-      - ${AUTH_SERVICE_WEB_PORT}
     ports:
-      - ${AUTH_SERVICE_WEB_PORT}:${AUTH_SERVICE_WEB_PORT}
+      - ${AUTH_SERVICE_WEB_PORT}
     networks:
       - gateway
       - default
@@ -47,10 +48,8 @@ services:
       GRPC_PORT: ${USERS_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
       DATABASE_URL: postgres://${USERS_DB_USERNAME}:${USERS_DB_PASSWORD}@users_postgres:5432/${USERS_DB_NAME}
-    expose:
-      - ${USERS_SERVICE_WEB_PORT}
     ports:
-      - ${USERS_SERVICE_WEB_PORT}:${USERS_SERVICE_WEB_PORT}
+      - ${USERS_SERVICE_WEB_PORT}
     networks:
       - gateway
       - default
