--- a/deployments/compose/gateway.docker-compose.yml
+++ b/deployments/compose/gateway.docker-compose.yml
@@ -21,6 +21,7 @@ services:
       GRPC_PORT: ${API_GATEWAY_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
       USERS_SERVICE_PATH: users-service
+      AUTH_SERVICE_PATH: auth-service
     ports:
       - ${API_GATEWAY_PORT}:${API_GATEWAY_PORT}
     networks:
