--- a/deployments/compose/auth-service.docker-compose.yml
+++ b/deployments/compose/auth-service.docker-compose.yml
@@ -12,19 +12,22 @@ services:
       GRPC_PORT: ${AUTH_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
       CONSUL_ADDRESS: http://consul:8500
-      REDIS_URL: http://auth_redis:${REDIS_DB_PORT}
+      REDIS_URL: auth_redis:${REDIS_DB_PORT}
     networks:
       - gateway
       - default
+      - auth_db_net
     deploy:
       replicas: 1
+    depends_on:
+      - auth_redis
 
   auth_redis:
     image: redis:7.4-alpine
     ports:
       - ${REDIS_DB_PORT}:6379
     volumes:
-      - auth_db_data
+      - auth_db_data:/data
     networks:
       - auth_db_net
 
