--- a/deployments/compose/auth-service.docker-compose.yml
+++ b/deployments/compose/auth-service.docker-compose.yml
@@ -12,6 +12,7 @@ services:
       GRPC_PORT: ${AUTH_SERVICE_GRPC_PORT}
       GRACEFUL_TIMEOUT: ${SERVICES_GRACEFUL_TIMEOUT}
       CONSUL_ADDRESS: http://consul:8500
+      USERS_SERVICE_PATH: users-service
       REDIS_URL: auth_redis:6379
     networks:
       - gateway
